--- a/Scanner/design/Design.kv
+++ b/Scanner/design/Design.kv
@@ -9,7 +9,7 @@ WindowManager:
         size_hint: 0.6, 0.7
         pos_hint: {'center_x': 0.5 , 'center_y': 0.5 }
         Image:
-            source: './images/filler.png'
+            source: './Scanner/images/filler.png'
         Label:
             text: "Hello there! what are we here to test?"
             font_size: 25
