--- a/Scanner/design/Design.kv
+++ b/Scanner/design/Design.kv
@@ -46,7 +46,7 @@ WindowManager:
         Rectangle:
             pos: self.pos
             size: self.size
-            source: './Scanner/images/cooltrator.jpg'
+            source: './Scanner/images/chicken.jpg'
     name: "Subnet Input"
     MDBoxLayout:
         pos_hint: {'center_x': 0.5 , 'center_y': 0.5 }
@@ -75,7 +75,6 @@ WindowManager:
             pos_hint: {'center_x': 0.5 , 'center_y': 0.5 }
             text: "Sweep"
             font_size: 20
-            size_hint_x: 0.6
             on_release: 
                 app.root.current = "Scan Output"
                 root.get_input([IpYielded])
@@ -91,13 +90,18 @@ WindowManager:
         orientation: 'vertical'
         size_hint: 0.6, 0.7
         pos_hint: {'center_x': 0.5 , 'center_y': 0.5 }
+    MDSpinner:
+        size_hint: None, None
+        size: dp(46), dp(46)
+        pos_hint: {'center_x': .5, 'center_y': .5}
+        active: True if app.AUX else False
         
 <SSHInput>:
     canvas.before:
         Rectangle:
             pos: self.pos
             size: self.size
-            source: './Scanner/images/cooltrator.jpg'
+            source: './Scanner/images/chicken.jpg'
     name: "SSH Input"
     MDBoxLayout:
         padding: "10dp"
@@ -124,8 +128,7 @@ WindowManager:
             line_color_focus: 1,1,1,1
         MDRaisedButton:
             pos_hint: {'center_x': 0.5 , 'center_y': 0.5 }
-            size_hint_x: 0.6
-            text: "SSHTest"
+            text: "SSH Test"
             font_size: 22
             on_release: 
                 app.root.current = "SSH Output"
