--- a/Scanner/design/Design.kv
+++ b/Scanner/design/Design.kv
@@ -148,7 +148,12 @@ WindowManager:
         orientation: 'vertical'
         size_hint: 0.6, 0.7
         pos_hint: {'center_x': 0.5 , 'center_y': 0.5 }
+        MDSpinner:
+            size_hint: None, None
+            size: dp(46), dp(46)
+            pos_hint: {'center_x': .5, 'center_y': .5}
+            active: True
         Label:
             id: SSHresult
-            text: "please wait..."
+            text: ""
             font_size: 25  
